# shogi-rs

./: .travis.yml  CHANGELOG.md  Cargo.toml  README.md  README.tpl  appveyor.yml
.chglog/: config.yml
.devcontainer/: devcontainer.json
.github/workflows/: audit.yml  coverage.yml  lint.yml  matrix.yml
benches/: perft.rs
src/: bitboard.rs  color.rs  error.rs  hand.rs  lib.rs  movegen.rs  moves.rs  piece.rs  piece_type.rs  position.rs  square.rs  time.rs
src/bitboard/: factory.rs  mod.rs
src/usi/: error.rs  gui.rs  mod.rs
src/usi/engine/: command.rs  mod.rs  parser.rs
