[package]
name = "shogi"
version = "0.12.2"
authors = ["nozaq"]
description = "Bitboard based Shogi library. Board representation, move handlings and various time control utilities."
keywords = ["shogi", "move", "usi", "sfen"]
categories = ["game-engines"]
repository = "https://github.com/nozaq/shogi-rs"
documentation = "http://nozaq.github.io/shogi-rs"
readme = "README.md"
license = "MIT"
edition = "2021"

[dependencies]
bitintr = "0.3"
itertools = "0.10"
thiserror = "1.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "perft"
harness = false

[profile.test]
opt-level = 0
debug = true
lto = false
debug-assertions = true
codegen-units = 1

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
